# oldschool-rs

./: Cargo.toml  LICENSE  README.md  shell.nix
crates/oldschool/: Cargo.toml
crates/oldschool/fixtures/: hiscores_1.txt
crates/oldschool/src/: boss.rs  clue.rs  hiscores.rs  level.rs  lib.rs  quest.rs  skill.rs  xp.rs  xp_table.rs
crates/oldschool/src/content/: quests.rs
src/: accounts.rs  diaries.rs  lib.rs  optimal_quest_guide.rs  quests.rs  skills.rs  wintertodt.rs
