[package]
name = "oldschool"
version = "0.1.0"
description = "A library for Old School RuneScape."
repository = "https://github.com/maxdeviant/oldschool-rs"
categories = ["games"]
keywords = ["osrs", "runescape"]
authors = ["Marshall Bowers <crates@maxdeviant.com>"]
license = "MIT"
edition = "2024"

[dependencies]
derive_more = { workspace = true, features = ["display"] }
enum-map.workspace = true
indexmap.workspace = true
smol_str.workspace = true
strum = { workspace = true, features = ["derive"] }
thiserror.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
